Updated html files

--- a/campaign/locations/regions/Matella/Alderpine/Alderpine.html
+++ b/campaign/locations/regions/Matella/Alderpine/Alderpine.html
@@ -102,9 +102,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Alderpine.jpg">
-      <img alt="Image" src="img/Alderpine.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Alderpine.jpg">
+       <img alt="Image" src="img/Alderpine.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
@@ -398,16 +400,10 @@
    <p>
     <ul>
      <li>
-      <a href="Talleril.html">
-       Talleril
-      </a>
-      : A small island far off the coast of Alderpine.
+      Talleril: A small island far off the coast of Alderpine.
      </li>
      <li>
-      <a href="Enthilma.html">
-       Enthilma
-      </a>
-      : A small island off the coast of Alderpine.
+      Enthilma: A small island off the coast of Alderpine.
      </li>
      <li>
       Lomelindei: The large world tree deep within Alderpine.
