--- a/campaign/locations/regions/Matella/Alderpine/Enthilma.html
+++ b/campaign/locations/regions/Matella/Alderpine/Enthilma.html
@@ -112,9 +112,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Enthilma.jpg">
-      <img alt="Image" src="img/Enthilma.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Enthilma.jpg">
+       <img alt="Image" src="img/Enthilma.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
