--- a/campaign/locations/regions/Matella/Alderpine/Riava_Plateau.html
+++ b/campaign/locations/regions/Matella/Alderpine/Riava_Plateau.html
@@ -57,6 +57,9 @@
     Summary
    </h3>
    <p class="first-paragraph">
+    The Riava Plateau, nestled within the Mystique Chada Mountains on the northwest border of
+    <a href="Alderpine.html">
+     Alderpine</a>, is a captivating and rugged landscape characterized by towering stone spires and treacherous rocky terrain. This untamed region is a haven for unique reptilian creatures and hides mysterious caves within its depths. The plateau exudes an air of mystery and adventure, enticing explorers and adventurers to uncover its secrets. With its dramatic vistas and diverse ecosystem, the Riava Plateau offers a thrilling and immersive experience for those brave enough to venture into its wild and enigmatic embrace.
    </p>
   </div>
   <hr/>
@@ -66,9 +69,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Riava_Plateau.jpg">
-      <img alt="Image" src="img/Riava_Plateau.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Riava_Plateau.jpg">
+       <img alt="Image" src="img/Riava_Plateau.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
@@ -84,30 +89,15 @@
     Demographics
    </h3>
    <p class="first-paragraph">
+    The Riava Plateau, nestled within the Mystique Chada Mountains on the northwest border of
+    <a href="Alderpine.html">
+     Alderpine</a>, is home to a diverse array of inhabitants who have adapted to the rugged and challenging environment. Among the unique species found in this region are the native Minotaurs, a rare and formidable race known for their strength and resilience. These Minotaurs have developed a close connection to the land, utilizing their physical prowess and deep understanding of the terrain to thrive in the harsh conditions of the plateau.
    </p>
-  </div>
-  <hr/>
-  <div class="dnd-info">
-   <h3>
-    Culture
-   </h3>
-   <p class="first-paragraph">
+   <p>
+    In addition to the Minotaurs, the Riava Plateau is also inhabited by a population of Goliaths, a proud and powerful race renowned for their towering stature and natural affinity for the mountainous regions. These Goliaths, with their exceptional endurance and mastery of survival skills, have established their presence within the rugged landscape, forming communities that embrace the ruggedness of the plateau and maintain a harmonious coexistence with the native Minotaurs.
    </p>
-  </div>
-  <hr/>
-  <div class="dnd-info">
-   <h3>
-    Governments
-   </h3>
-   <p class="first-paragraph">
-   </p>
-  </div>
-  <hr/>
-  <div class="dnd-info">
-   <h3>
-    Economy
-   </h3>
-   <p class="first-paragraph">
+   <p>
+    The demographics of the Riava Plateau reflect a balance between these two distinct races, each contributing their unique strengths and perspectives to the region. While Minotaurs embody a fierce determination and deep connection to the land, Goliaths bring their innate understanding of the mountains and a nomadic spirit that complements the untamed nature of the plateau. Together, they create a vibrant tapestry of cultures and traditions, shaped by their interactions with the formidable environment they call home.
    </p>
   </div>
   <hr/>
@@ -116,6 +106,22 @@
     Transportation
    </h3>
    <p class="first-paragraph">
+    Transportation within the Riava Plateau presents unique challenges due to its rugged and rocky terrain. The natural landscape of the plateau, characterized by towering stone spires and harsh rocky formations, poses obstacles for traditional modes of transportation. As such, the primary means of travel within the plateau are adapted to the specific needs and capabilities of the Minotaur and Goliath communities.
+   </p>
+   <p>
+    One notable method of transportation utilized by the inhabitants of the Riava Plateau is surefootedness and agility. The Minotaurs and Goliaths possess innate physical prowess and exceptional balance, enabling them to navigate the rocky terrain with relative ease. They are adept at traversing narrow ledges, scaling steep inclines, and leaping across crevices, using their strength and dexterity to move swiftly and efficiently.
+   </p>
+   <p>
+    Furthermore, the Minotaurs and Goliaths have developed a network of natural pathways and trails that wind through the plateau, taking advantage of the more stable and accessible sections of the terrain. These pathways, often marked by distinctive rock formations or ancient symbols, allow for safer and more efficient travel within the region.
+   </p>
+   <p>
+    In addition to their own physical capabilities, the Minotaurs and Goliaths also employ various equipment and tools designed to aid in transportation. Sturdy climbing ropes, grappling hooks, and specialized footwear with enhanced grip are commonly used to traverse particularly challenging areas. These tools, combined with their innate abilities, enable them to navigate the Riava Plateau and its intricate cave systems, ensuring safe passage between different locations.
+   </p>
+   <p>
+    It is worth noting that due to the rugged nature of the terrain and the self-sufficiency of the Minotaur and Goliath communities, external modes of transportation such as vehicles or mounts are not prevalent within the Riava Plateau. Instead, the inhabitants rely on their natural abilities, intimate knowledge of the landscape, and specialized equipment to move swiftly and efficiently throughout the region.
+   </p>
+   <p>
+    Visitors to the Riava Plateau are advised to exercise caution and respect the unique transportation methods employed by the Minotaurs and Goliaths. It is essential to seek guidance and assistance from the local inhabitants to ensure safe passage and to fully appreciate the natural beauty and challenges of this remarkable plateau.
    </p>
   </div>
   <hr/>
@@ -124,6 +130,19 @@
     Crime
    </h3>
    <p class="first-paragraph">
+    Crime within the Riava Plateau is relatively rare, primarily due to the close-knit and tightly-knit communities of Minotaurs and Goliaths who call this region home. These proud and honorable races uphold a strong sense of personal responsibility and respect for their fellow inhabitants. They adhere to an unwritten code of conduct that emphasizes fairness, cooperation, and communal well-being.
+   </p>
+   <p>
+    Instances of crime are typically limited to minor disputes or occasional conflicts arising from territorial boundaries or scarce resources. The Minotaur and Goliath communities have established an informal system of conflict resolution, often relying on respected elders or tribal leaders to mediate and restore harmony.
+   </p>
+   <p>
+    However, one should not underestimate the vigilance and protectiveness of the Minotaur and Goliath populations when it comes to guarding their homeland. Outsiders who venture into the Riava Plateau without proper authorization or display hostile intentions may face stern warnings or be swiftly expelled from the region. The Minotaurs and Goliaths take great pride in safeguarding their lands and maintaining the tranquility of the plateau, making it a place where peaceful coexistence thrives.
+   </p>
+   <p>
+    It is worth noting that the rugged and challenging terrain of the Riava Plateau acts as a natural deterrent to potential criminals or hostile groups seeking to exploit the area. The rocky cliffs, treacherous pathways, and intricate cave systems serve as a form of natural defense, requiring deep familiarity and knowledge of the landscape to navigate safely. This, coupled with the watchful eyes of the Minotaurs and Goliaths, acts as a deterrent against criminal activities within the region.
+   </p>
+   <p>
+    Overall, the Riava Plateau stands as a testament to the harmonious cohabitation and shared values of the Minotaur and Goliath communities, creating an environment where crime is minimal and the well-being of the plateau and its inhabitants takes precedence.
    </p>
   </div>
   <hr/>
@@ -140,6 +159,29 @@
     Landmarks and Other Features
    </h3>
    <p>
+    <ul>
+     <li>
+      The Horned Citadel: Perched atop one of the highest peaks of the Riava Plateau, the Horned Citadel stands as a symbol of Minotaur strength and resilience. This imposing fortress, constructed from weathered stone and adorned with intricate carvings, serves as a central hub for the Minotaur communities. Its strategic location offers a commanding view of the surrounding landscape, providing both protection and a vantage point to watch over the plateau.
+     </li>
+     <li>
+      The Goliath's Roost: Nestled amidst the rocky cliffs of the Riava Plateau, the Goliath's Roost is a series of elevated stone platforms that serve as meeting places and gathering spots for the Goliath tribes. These sturdy, natural formations provide a panoramic view of the sprawling plateau below, allowing the Goliaths to convene for important discussions, storytelling, and communal celebrations.
+     </li>
+     <li>
+      The Whispering Caves: Deep within the labyrinthine network of caverns that crisscross the Riava Plateau, lies the enigmatic Whispering Caves. These subterranean chambers are adorned with peculiar rock formations, reflecting the eons of geological processes that shaped the plateau. As the wind gusts through narrow passages and hollows, it creates an eerie symphony of whispers, giving the caves their name and an air of mystery.
+     </li>
+     <li>
+      The Sun-Kissed Terrace: Located on the eastern edge of the Riava Plateau, the Sun-Kissed Terrace is a vast, open expanse of sun-drenched rock formations. As the day progresses, the terraces become bathed in warm sunlight, casting enchanting shadows and showcasing the vibrant hues of the surrounding flora. It is a tranquil and serene spot where both Minotaurs and Goliaths gather to bask in the sun's embrace and find solace amidst the rugged beauty of the plateau.
+     </li>
+     <li>
+      The Veil of Mist: As the Riava Plateau stretches towards its western edge, a natural phenomenon known as the Veil of Mist occurs. This ethereal veil blankets the lower valleys and ravines, creating an otherworldly atmosphere. The mist, infused with a subtle magical essence, shrouds the landscape, lending an air of mystique and enchantment to the already captivating Riava Plateau.
+     </li>
+     <li>
+      The Crystal Springs: Tucked away within a hidden grove, the Crystal Springs are a collection of sparkling, crystal-clear water sources that emerge from beneath the rugged terrain of the plateau. Fed by underground aquifers and filtered through layers of rock, these pristine springs offer refreshing respite to both the Minotaurs and Goliaths, providing a source of life-giving water amidst the rocky and arid environment.
+     </li>
+     <li>
+      The Dancing Gorge: Carved by millennia of erosion, the Dancing Gorge is a dramatic geological formation that winds its way through the heart of the Riava Plateau. With its steep cliffs and twisting pathways, the gorge presents a challenging but awe-inspiring route for intrepid explorers. Its name comes from the playful dance of sunlight and shadows that cascade along its walls, creating a captivating display of natural beauty.
+     </li>
+    </ul>
    </p>
   </div>
   <hr/>
@@ -148,6 +190,18 @@
     Music And Ambiance
    </h3>
    <p>
+    <ul>
+     <li>
+      <a href="https://www.youtube.com/watch?v=eEl8QGmrWQg
+">
+       Vanilla Thousand Needles - Music &amp; Ambience (1 hour, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Thousand_Needles__Music_&amp;_Ambience_(1_hour,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+    </ul>
    </p>
   </div>
   <hr/>
