--- a/campaign/locations/regions/Matella/Aldor_Sovereign/Aldor_Sovereign.html
+++ b/campaign/locations/regions/Matella/Aldor_Sovereign/Aldor_Sovereign.html
@@ -94,9 +94,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Aldor_Sovereign.jpg">
-      <img alt="Image" src="img/Aldor_Sovereign.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Aldor_Sovereign.jpg">
+       <img alt="Image" src="img/Aldor_Sovereign.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
