--- a/campaign/locations/regions/Matella/Bakaria/Bakaria.html
+++ b/campaign/locations/regions/Matella/Bakaria/Bakaria.html
@@ -87,9 +87,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Bakaria.jpg">
-      <img alt="Image" src="img/Bakaria.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Bakaria.jpg">
+       <img alt="Image" src="img/Bakaria.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
