--- a/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
@@ -124,9 +124,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Daystone_Isle.jpg">
-      <img alt="Image" src="img/Daystone_Isle.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Daystone_Isle.jpg">
+       <img alt="Image" src="img/Daystone_Isle.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
