--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/Utengho_Marshlands.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/Utengho_Marshlands.html
@@ -58,11 +58,11 @@
    </h3>
    <p class="first-paragraph">
     The Utengho Marshlands, nestled between the
-    <a href="Mentassa_Plains.html">
+    <a href="../Mentassa_Plains/Mentassa_Plains.html">
      Mentassa Plains
     </a>
     and the
-    <a href="../Elda_Reem_Passlands/Elda_Reem_Passlands.html">
+    <a href="Elda_Reem_Passlands.html">
      Elda Reem Passlands</a>, form a sprawling expanse of mystical beauty and untamed wilderness. This vast marshland is a realm of enchantment, teeming with vibrant flora and fauna that flourish in its unique ecosystem. The marshlands present a captivating tapestry of lush vegetation, intricate waterways, and mysterious creatures, making it a realm both awe-inspiring and treacherous.
    </p>
    <p>
@@ -168,9 +168,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Utengho_Marshlands.jpg">
-      <img alt="Image" src="img/Utengho_Marshlands.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Utengho_Marshlands.jpg">
+       <img alt="Image" src="img/Utengho_Marshlands.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
