--- a/campaign/locations/regions/Matella/Eldara/Eldara.html
+++ b/campaign/locations/regions/Matella/Eldara/Eldara.html
@@ -71,9 +71,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Eldara.jpg">
-      <img alt="Image" src="img/Eldara.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Eldara.jpg">
+       <img alt="Image" src="img/Eldara.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
@@ -319,16 +321,10 @@
    <p>
     <ul>
      <li>
-      <a href="../../../../items/consumables/herbs/Desert_Sage.html">
-       Desert Sage
-      </a>
-      (Salvus aureus): A hardy plant with silvergray leaves and small purple flowers. It thrives in the arid climate of Eldara and is known for its medicinal properties, used by the locals for healing and purification rituals.
+      Desert Sage (Salvus aureus): A hardy plant with silvergray leaves and small purple flowers. It thrives in the arid climate of Eldara and is known for its medicinal properties, used by the locals for healing and purification rituals.
      </li>
      <li>
-      <a href="../../../../items/consumables/herbs/Sand_Blossom.html">
-       Sand Blossom
-      </a>
-      (Flora auris): This rare and beautiful flower blooms only during the cool nights of Eldara's desert. Its petals are a vibrant shade of magenta, contrasting against the sandy landscape. The
+      Sand Blossom (Flora auris): This rare and beautiful flower blooms only during the cool nights of Eldara's desert. Its petals are a vibrant shade of magenta, contrasting against the sandy landscape. The
       <a href="../../../../items/consumables/herbs/Sand_Blossom.html">
        Sand Blossom
       </a>
@@ -388,9 +384,7 @@
    <p>
     <ul>
      <li>
-      <a href="Sifariato_Mountains.html">
-       Sifariato Mountains
-      </a>
+      Sifariato Mountains
      </li>
      <li>
       Lessercrest Mountains
