--- a/campaign/locations/regions/Matella/Eldara/Sifariato_Mountains.html
+++ b/campaign/locations/regions/Matella/Eldara/Sifariato_Mountains.html
@@ -84,9 +84,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Sifariato_Mountains.jpg">
-      <img alt="Image" src="img/Sifariato_Mountains.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Sifariato_Mountains.jpg">
+       <img alt="Image" src="img/Sifariato_Mountains.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
