--- a/campaign/locations/regions/Matella/Gharoni_Highlands/Gharoni_Highlands.html
+++ b/campaign/locations/regions/Matella/Gharoni_Highlands/Gharoni_Highlands.html
@@ -69,9 +69,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Gharoni_Highlands.jpg">
-      <img alt="Image" src="img/Gharoni_Highlands.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Gharoni_Highlands.jpg">
+       <img alt="Image" src="img/Gharoni_Highlands.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
