--- a/campaign/locations/regions/Matella/Loch_Modar/Loch_Modar.html
+++ b/campaign/locations/regions/Matella/Loch_Modar/Loch_Modar.html
@@ -89,9 +89,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Loch_Modar.jpg">
-      <img alt="Image" src="img/Loch_Modar.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Loch_Modar.jpg">
+       <img alt="Image" src="img/Loch_Modar.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
