--- a/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
@@ -90,9 +90,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Mentassa_Plains.jpg">
-      <img alt="Image" src="img/Mentassa_Plains.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Mentassa_Plains.jpg">
+       <img alt="Image" src="img/Mentassa_Plains.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
@@ -252,6 +254,22 @@
    <p class="subsection">
     In addition to traditional crops, the Mentassa Plains boasts a selection of unique and specialty crops that have become synonymous with the region's agricultural prowess. These crops thrive in the favorable growing conditions and contribute to the province's distinct identity. Some of the unique crops grown in the Mentassa Plains include:
    </p>
+   <p class="first-paragraph">
+    <ul>
+     <li>
+      Sunfire Grains: These grains have a vibrant golden hue and are renowned for their high nutritional value. Sunfire grains are a local delicacy and soughtafter export, known for their nutty flavor and versatility in various culinary preparations.
+     </li>
+     <li>
+      Velvet Blossom Tea Leaves: Grown in carefully tended gardens, the delicate leaves of the velvet blossom plant yield a soothing and aromatic tea known for its calming properties. This unique tea has gained popularity among tea connoisseurs in distant lands, becoming a coveted commodity.
+     </li>
+     <li>
+      Silverleaf Orchards: Orchards of the silverleaf trees dot the landscape of the Mentassa Plains, producing a rare and highly prized fruit. The silverleaf fruit is known for its exquisite taste, luscious texture, and captivating silver sheen. Its scarcity and unique flavor have made it a symbol of prosperity and indulgence.
+     </li>
+     <li>
+      Shimmering Wheat: A variety of wheat known for its shimmering golden hues, this crop not only serves as a staple food source but also finds use in ornamental decorations. Its distinctive appearance adds an enchanting touch to harvest festivals and celebratory events in the Mentassa Plains.
+     </li>
+    </ul>
+   </p>
    <h4>
     Trade and Commerce
    </h4>
@@ -271,22 +289,6 @@
     The inhabitants of the Mentassa Plains prioritize sustainable agricultural practices and responsible land management. They understand the delicate balance between human activities and the preservation of the natural environment. Techniques such as crop rotation, water conservation, and organic farming methods are employed to ensure the long-term health and productivity of the land.
    </p>
    <p class="first-paragraph">
-    <ul>
-     <li>
-      Sunfire Grains: These grains have a vibrant golden hue and are renowned for their high nutritional value. Sunfire grains are a local delicacy and soughtafter export, known for their nutty flavor and versatility in various culinary preparations.
-     </li>
-     <li>
-      Velvet Blossom Tea Leaves: Grown in carefully tended gardens, the delicate leaves of the velvet blossom plant yield a soothing and aromatic tea known for its calming properties. This unique tea has gained popularity among tea connoisseurs in distant lands, becoming a coveted commodity.
-     </li>
-     <li>
-      Silverleaf Orchards: Orchards of the silverleaf trees dot the landscape of the Mentassa Plains, producing a rare and highly prized fruit. The silverleaf fruit is known for its exquisite taste, luscious texture, and captivating silver sheen. Its scarcity and unique flavor have made it a symbol of prosperity and indulgence.
-     </li>
-     <li>
-      Shimmering Wheat: A variety of wheat known for its shimmering golden hues, this crop not only serves as a staple food source but also finds use in ornamental decorations. Its distinctive appearance adds an enchanting touch to harvest festivals and celebratory events in the Mentassa Plains.
-     </li>
-    </ul>
-   </p>
-   <p>
     In conclusion, the economy of the Mentassa Plains revolves around a robust agricultural sector that sustains the local population and facilitates limited trade. While traditional crops form the foundation of the agricultural landscape, unique crops add diversity and contribute to the province's distinctive character. The region's focus on sustainable practices and responsible land stewardship ensures a harmonious relationship between humans, nature, and the prosperity of the province.
    </p>
   </div>
@@ -416,9 +418,7 @@
    <p>
     <ul>
      <li>
-      <a href="Utengho_Marshlands.html">
-       Utengho Marshlands
-      </a>
+      Utengho Marshlands
      </li>
      <li>
       Ut Rune Lake
