--- a/campaign/locations/regions/Matella/The_Ashenlands/The_Ashenlands.html
+++ b/campaign/locations/regions/Matella/The_Ashenlands/The_Ashenlands.html
@@ -90,9 +90,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/The_Ashenlands.jpg">
-      <img alt="Image" src="img/The_Ashenlands.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/The_Ashenlands.jpg">
+       <img alt="Image" src="img/The_Ashenlands.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
