--- a/campaign/locations/regions/Matella/Zenitha/Zenitha.html
+++ b/campaign/locations/regions/Matella/Zenitha/Zenitha.html
@@ -67,9 +67,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Zenitha.jpg">
-      <img alt="Image" src="img/Zenitha.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Zenitha.jpg">
+       <img alt="Image" src="img/Zenitha.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
