--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html
@@ -84,9 +84,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Zhu_Lang_Dynasty.jpg">
-      <img alt="Image" src="img/Zhu_Lang_Dynasty.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Zhu_Lang_Dynasty.jpg">
+       <img alt="Image" src="img/Zhu_Lang_Dynasty.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
@@ -276,10 +278,7 @@
    <p>
     <ul>
      <li>
-      <a href="Gostee_Wilderness.html">
-       Gostee Wilderness
-      </a>
-      : A cursed area of dead and haunted forest nestled against the mountains to the southwest of the Zhu Lang Dynasty.
+      Gostee Wilderness: A cursed area of dead and haunted forest nestled against the mountains to the southwest of the Zhu Lang Dynasty.
      </li>
      <li>
       Spicatus Venenorum Woods (Spicatus meaning "spiked" and Venenorum meaning "of venom")
@@ -358,11 +357,20 @@
       </a>
      </li>
      <li>
-      <a href="https://www.youtube.com/watch?v=f2kddgPb_Pc
-">
+      <a href="https://www.youtube.com/watch?v=f2kddgPb_Pc">
        The Forsaken of Vanilla - Music &amp; Ambience (1 hour, 4K, World of Warcraft Classic)
       </a>
       <a href="../../../../../music/The_Forsaken_of_Vanilla__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
+       <i class="fas fa-folder">
+       </i>
+      </a>
+     </li>
+     <li>
+      <a href="https://www.youtube.com/watch?v=Jd1rlP36gv8
+">
+       Vanilla Stonetalon Mountains - Music &amp; Ambience (30 minutes, 4K, World of Warcraft Classic)
+      </a>
+      <a href="../../../../../music/Vanilla_Stonetalon_Mountains__Music_&amp;_Ambience_(30_minutes,_4K,_World_of_Warcraft_Classic).mp3">
        <i class="fas fa-folder">
        </i>
       </a>
