--- a/campaign/locations/regions/Matella/Matella.html
+++ b/campaign/locations/regions/Matella/Matella.html
@@ -58,9 +58,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Matella.jpg">
-      <img alt="Image" src="img/Matella.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Matella.jpg">
+       <img alt="Image" src="img/Matella.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
@@ -282,74 +284,46 @@
    <p>
     <ul>
      <li>
-      <a href="Alderpine/Alderpine.html">
-       Alderpine
-      </a>
+      Alderpine
      </li>
      <li>
-      <a href="Aldor_Sovereign/Aldor_Sovereign.html">
-       Aldor Sovereign
-      </a>
+      Aldor Sovereign
      </li>
      <li>
-      <a href="The_Ashenlands/The_Ashenlands.html">
-       The Ashenlands
-      </a>
+      The Ashenlands
      </li>
      <li>
-      <a href="Bakaria/Bakaria.html">
-       Bakaria
-      </a>
+      Bakaria
      </li>
      <li>
-      <a href="Daystone_Isle/Daystone_Isle.html">
-       Daystone Isle
-      </a>
+      Daystone Isle
      </li>
      <li>
-      <a href="Eldara/Eldara.html">
-       Eldara
-      </a>
+      Eldara
      </li>
      <li>
-      <a href="Elda_Reem_Passlands/Elda_Reem_Passlands.html">
-       Elda Reem Passlands
-      </a>
+      Elda Reem Passlands
      </li>
      <li>
-      <a href="Gharoni_Highlands/Gharoni_Highlands.html">
-       Gharoni Highlands
-      </a>
+      Gharoni Highlands
      </li>
      <li>
-      <a href="Loch_Modar/Loch_Modar.html">
-       Loch Modar
-      </a>
+      Loch Modar
      </li>
      <li>
-      <a href="Mentassa_Plains/Mentassa_Plains.html">
-       Mentassa Plains
-      </a>
+      Mentassa Plains
      </li>
      <li>
-      <a href="Tinco_Merz/Tinco_Merz.html">
-       Tinco Merz
-      </a>
+      Tinco Merz
      </li>
      <li>
-      <a href="Visterguarde/Visterguarde.html">
-       Visterguarde
-      </a>
+      Visterguarde
      </li>
      <li>
-      <a href="Zenitha/Zenitha.html">
-       Zenitha
-      </a>
+      Zenitha
      </li>
      <li>
-      <a href="Zhu_Lang_Dynasty/Zhu_Lang_Dynasty.html">
-       Zhu Lang Dynasty
-      </a>
+      Zhu Lang Dynasty
      </li>
     </ul>
    </p>
@@ -362,24 +336,16 @@
    <p>
     <ul>
      <li>
-      <a href="Zhu_Lang_Dynasty/Gostee_Wilderness.html">
-       Gostee Wilderness
-      </a>
+      Gostee Wilderness
      </li>
      <li>
-      <a href="Alderpine/Riava_Plateau.html">
-       Riava Plateau
-      </a>
+      Riava Plateau
      </li>
      <li>
-      <a href="Eldara/Sifariato_Mountains.html">
-       Sifariato Mountains
-      </a>
+      Sifariato Mountains
      </li>
      <li>
-      <a href="Alderpine/Talleril.html">
-       Talleril
-      </a>
+      Talleril
      </li>
     </ul>
    </p>
@@ -391,9 +357,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Matella_labeled.jpg">
-      <img alt="Image" src="img/Matella_labeled.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Matella_labeled.jpg">
+       <img alt="Image" src="img/Matella_labeled.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
