--- a/campaign/locations/regions/Matella/Tinco_Merz/Tinco_Merz.html
+++ b/campaign/locations/regions/Matella/Tinco_Merz/Tinco_Merz.html
@@ -73,9 +73,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Tinco_Merz.jpg">
-      <img alt="Image" src="img/Tinco_Merz.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Tinco_Merz.jpg">
+       <img alt="Image" src="img/Tinco_Merz.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
