--- a/campaign/locations/regions/Matella/Visterguarde/Visterguarde.html
+++ b/campaign/locations/regions/Matella/Visterguarde/Visterguarde.html
@@ -95,9 +95,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Visterguarde.jpg">
-      <img alt="Image" src="img/Visterguarde.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Visterguarde.jpg">
+       <img alt="Image" src="img/Visterguarde.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
