--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Gostee_Wilderness.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/Gostee_Wilderness.html
@@ -83,9 +83,11 @@
    </h3>
    <p>
     <div class="dnd-image-info">
-     <a href="img/Gostee_Wilderness.jpg">
-      <img alt="Image" src="img/Gostee_Wilderness.jpg"/>
-     </a>
+     <div class="dnd-image-list">
+      <a href="img/Gostee_Wilderness.jpg">
+       <img alt="Image" src="img/Gostee_Wilderness.jpg"/>
+      </a>
+     </div>
      <div class="dnd-image-source">
       Source: Created by Antonius Torode
      </div>
